fix: add z-index to header

--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -1,5 +1,6 @@
 .header {
   position: fixed;
+  z-index: 1000;
   width: 100%;
   background-color: $main-bg;
   &__wrapper {
